--- a/apps/homescreen/elements/search_page.html
+++ b/apps/homescreen/elements/search_page.html
@@ -44,6 +44,18 @@
           </menu>
         </form>
       </div>
+      <div id="bgimage-overlay">
+        <div class="img"></div>
+        <div class="content">
+          <b class="rightbutton"></b>
+          <h2></h2>
+          <div class="source">
+            <b data-l10n-id="evme-backgroundimage-source-label"></b>
+            <span></span>
+          </div>
+          <b class="close"></b>
+        </div>
+      </div>
     </div>
 
     <div id="evmeContainer" class="evmeScope empty-query">
